--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "signaling-server-express",
   "version": "1.0.0",
-  "description": "",
+  "description": "1. git clone https://github.com/igovor01/zavrsni-rad.git",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,5 +12,6 @@
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.7.2"
-  }
+  },
+  "devDependencies": {}
 }
